[FIX] fix some css + dark mode bg pic + dark mode text color + some others stuff

--- a/public/css/composent/appointment.css
+++ b/public/css/composent/appointment.css
@@ -6,24 +6,21 @@
   margin: 20px 0px;
   overflow: hidden;
 }
-
 .appointment-img {
   background-image: url("../images/house/test1.jpg");
 }
-
 .appointment-text {
   padding: 200px 20px;
   font-size: 50px;
   background: rgba(0, 0, 0, 0.1);
+  color: white;
 }
-
 .appointment-form {
   padding: 20px;
 }
-
 .appointment-form input,
 textarea {
-  width: 60%;
+  width: 70%;
   padding: 10px;
   margin-bottom: 20px;
   outline: none;
@@ -31,13 +28,10 @@ textarea {
   color: black;
   font-size: 16px;
 }
-
 .appointment-form textarea {
-  height: 100px;
-  max-height: 100px;
+  height: 135px;
   overflow-y: scroll;
 }
-
 .appointment-btn {
   border: 2px solid white;
   background: transparent;
@@ -46,7 +40,6 @@ textarea {
   outline: none;
   cursor: pointer;
 }
-
 .appointment-btn:hover {
   background: white;
   color: #0f4c75;
@@ -61,7 +54,6 @@ textarea {
   .appointment-text {
     padding: 150px 20px;
   }
-
   .appointment-form input,
   textarea {
     width: 80%;
