--- a/public/css/composent/availability-calendar.css
+++ b/public/css/composent/availability-calendar.css
@@ -8,12 +8,11 @@
   padding-bottom: 15px;
   font-size: 1.7em;
   background: #002b47;
+  color: white;
 }
-
 .availability-calendar-toolbar span:last-child {
   float: right;
 }
-
 .availability-calendar-toolbar input {
   padding: 7px 14px;
   background: #00000000;
@@ -22,11 +21,9 @@
   cursor: pointer;
   border: none;
 }
-
 .availability-calendar-toolbar input:first-child {
   margin-right: 5px;
 }
-
 .availability-calendar-toolbar input:hover {
   color: #000000;
 }
@@ -40,35 +37,29 @@
   background: #0f4c75;
   table-layout: fixed;
   border-collapse: collapse;
+  color: white;
 }
-
 .availability-calendar th,
 .availability-calendar td {
   padding: 5px;
 }
-
 .availability-calendar td:hover {
   color: #00aa41;
 }
-
 .availability-calendar td {
   height: 50px;
   text-align: center;
 }
-
 .availability-calendar .ex-month {
   opacity: 0.4;
 }
-
 .availability-calendar .unavailable {
   background: #a73535;
   position: relative;
 }
-
 .availability-calendar .unavailable:hover {
   color: #ff0000;
 }
-
 @media screen and (max-width: 800px) {
   .availability-calendar-toolbar {
     width: 90%;
