--- a/public/css/composent/overview.css
+++ b/public/css/composent/overview.css
@@ -7,6 +7,7 @@
   display: inline-block;
   min-width: 27%;
   line-height: 20px;
+  color: white;
 }
 .summary {
   background: #0f4c75;
@@ -17,6 +18,7 @@
   display: inline-block;
   line-height: 40px;
   min-width: 27%;
+  color: white;
 }
 @media screen and (max-width: 1050px) {
   .description {
