--- a/public/css/layout/footer.css
+++ b/public/css/layout/footer.css
@@ -3,6 +3,7 @@
   text-align: center;
   padding: 20px;
   margin-top: 40px;
+  color: white;
 }
 .locations {
   font-size: 20px;
