--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -127,6 +127,7 @@
     font-size: 25px;
   }
   .label {
-    margin-left: 45%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
